Repeat (Shift R) scaling vertex (two or more) to the selected vertex (scale x 0) on axis does not work correctly. #75398

Closed
opened 2020-04-05 06:28:31 +02:00 by Angel Agudo Guerrero · 13 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-03 21:41, hash: 7c0e285948
Worked: (newest version of Blender that worked as expected)

Short description of error

Repeat (Shift R) scaling vertex (two or more) to the selected vertex (scale x 0) on axis does not work correctly.

Exact steps for others to reproduce the error
Pivot: Active Element
Snap: To vertex / Snap with: Active

Select a series of vertices.
Select another vertex to align.
Scale on axis (X for example) and (0) to adjust.
now select another series of vertices and another vertex to align.
press shift R to repeat.
Here is the problem. It doesn't work like before.

I hope the explanation and the video are helpful.
Thank you!!
Cheers{F8449745}

[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-03 21:41, hash: `7c0e285948` Worked: (newest version of Blender that worked as expected) **Short description of error** Repeat (Shift R) scaling vertex (two or more) to the selected vertex (scale x 0) on axis does not work correctly. **Exact steps for others to reproduce the error** Pivot: Active Element Snap: To vertex / Snap with: Active Select a series of vertices. Select another vertex to align. Scale on axis (X for example) and (0) to adjust. now select another series of vertices and another vertex to align. press shift R to repeat. Here is the problem. It doesn't work like before. I hope the explanation and the video are helpful. Thank you!! Cheers{[F8449745](https://archive.blender.org/developer/F8449745/Align_Vertices_to_Active_Vertex._Repeat__Shift_R__scaling_vertex__two_or_more__to_the_selected_vertex__scale_x_0__on_axis_does_not_work_correctly.)} [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]

Added subscriber: @Angel_Agudo_Guerrero

Added subscriber: @Angel_Agudo_Guerrero
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

It doesn't work like before.

Mind adding a working version ?

> It doesn't work like before. Mind adding a working version ?

In #75398#903954, @ankitm wrote:

It doesn't work like before.

Mind adding a working version ?

blender-2.83-20b47d77e19f-windows64 (21-02-2020)
This version is ok.

blender-2.83-20b47d77e19f-windows64.zip

I do not know if there is any later than this where the problem of the latest version does not appear

> In #75398#903954, @ankitm wrote: >> It doesn't work like before. > Mind adding a working version ? blender-2.83-20b47d77e19f-windows64 (21-02-2020) This version is ok. [blender-2.83-20b47d77e19f-windows64.zip](https://archive.blender.org/developer/F8450776/blender-2.83-20b47d77e19f-windows64.zip) I do not know if there is any later than this where the problem of the latest version does not appear
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

ah the name was enough, you didn't have to upload the full app :)

ah the name was enough, you didn't have to upload the full app :)

Hi again.

In the last version:

blender-2.83-10f0e003a95a-windows64

The problem is not solved yet.

Thanks for your attention.

Angel.

Hi again. In the last version: blender-2.83-10f0e003a95a-windows64 The problem is not solved yet. Thanks for your attention. Angel.
Contributor

Added subscriber: @RedMser

Added subscriber: @RedMser
Contributor

Bisect shows that this bug was introduced with 91abb70006

Might help a developer in fixing this.

Bisect shows that this bug was introduced with 91abb70006866e651233ff44f0f275856a6bf65d Might help a developer in fixing this.
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Bisect shows that this bug was introduced with 91abb70006

CC @mano-wii

> Bisect shows that this bug was introduced with 91abb70006866e651233ff44f0f275856a6bf65d CC @mano-wii

This issue was referenced by a4df7f78a8

This issue was referenced by a4df7f78a8816ca463cb09f23ac64b989cd8ebb0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-04-27 17:08:03 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75398
No description provided.