Fix T75398: Redo with Shift R always uses the previous pivot center

Overwriting the pivot center was an attempt to fix T71455.
The solution now is to save the direction in the "mirror" property.